Fix profile photo border radius overflow bug on Safari (macOS/iOS)
Add safe area placeholder

--- a/src/assets/sass/components/_nav.scss
+++ b/src/assets/sass/components/_nav.scss
@@ -355,7 +355,7 @@ nav a {
     width: 4rem;
 
     .nav__link--avatar {
-      border-radius: 4rem !important;
+      border-radius: 49% !important;
       box-shadow: $frame-shadow-outside;
       display: block;
       height: 100%;
