--- a/src/assets/sass/pages/_profile.scss
+++ b/src/assets/sass/pages/_profile.scss
@@ -9,7 +9,7 @@
 
   .profile__icon {
     background-color: $white;
-    border-radius: 100%;
+    border-radius: 49%;
     bottom: 0;
     color: $brand-color;
     font-size: $ico-size-m;
